--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  /* background: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125)); */
+}
+
+section{
+  background: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125));
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
