added some features for chatting page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,11 +2,8 @@
   margin: 0;
   box-sizing: border-box;
   padding: 0;
-  /* background: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125)); */
-}
-
-section{
-  background: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125));
+  /* background-color: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125)); */
+  background-color: #FBF5DE;
 }
 
 /* #root {
