--- a/client/src/components/Chat/ChatPage.css
+++ b/client/src/components/Chat/ChatPage.css
@@ -1,7 +1,12 @@
 .chat-page {
+  width: 100%;
   display: flex;
   height: 100vh;
   background-color: #FBF5DE; /* Soft background */
   font-family: 'Courier New', Courier, monospace;
   border: 1px solid rgb(173, 173, 173);
+}
+
+.chat-page::-webkit-scrollbar{
+  display: none;
 }
