--- a/client/src/components/Chat/SideBar.css
+++ b/client/src/components/Chat/SideBar.css
@@ -1,10 +1,16 @@
 .sidebar {
-  width: 250px;
+  width: 20%;
   background-color: #FBF5DE;
   color: rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
   padding: 20px;
+  position: fixed;
+  height: 100vh;
+  z-index: 100;
+  top: 0;
+  right: 0;
+  border-left: 1px solid rgb(185, 183, 183);
 }
 
 .sidebar h2 {
