day2: part 2 added some features

--- a/client/src/components/Chat/ChatWindow.css
+++ b/client/src/components/Chat/ChatWindow.css
@@ -11,7 +11,8 @@
   flex: 1;
   overflow-y: auto;
   /* padding: 16px; */
-  background-color: #FBF5DE;
+  /* background-color: #FBF5DE; */
+  /* background-color: black; */
   border-left: 1px solid #ccc;
 }
 
