--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,8 @@
   box-sizing: border-box;
   padding: 0;
   /* background-color: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125)); */
-  background-color: #FBF5DE;
+  /* background-color: #FBF5DE; */
+  background-color: #DDDDDD;
 }
 
 /* #root {
