--- a/client/src/components/Chat/ChatPage.css
+++ b/client/src/components/Chat/ChatPage.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   height: 100vh;
-  background-color: #FBF5DE; /* Soft background */
+  /* background-color: #000000; */
   font-family: 'Courier New', Courier, monospace;
   border: 1px solid rgb(173, 173, 173);
 }
