--- a/client/src/components/Chat/MessageInput.css
+++ b/client/src/components/Chat/MessageInput.css
@@ -3,7 +3,7 @@
   height: 13%;
   width: 100%;
   padding: 10px 16px;
-  background-color: transparent;
+  /* background-color: transparent; */
   border-top: 1px solid #ccc;
   position: fixed;
   bottom: 0;
@@ -12,6 +12,7 @@
   align-items: center;     /* 👈 Align items vertically */
   gap: 12px;               /* Optional: space between textarea and button */
   margin: 0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 
