--- a/client/src/components/Chat/SideBar.css
+++ b/client/src/components/Chat/SideBar.css
@@ -1,27 +1,30 @@
 .sidebar {
   width: 20%;
-  background-color: #FBF5DE;
+  background-color: #dddddd;
   color: rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
-  padding: 20px;
   position: fixed;
   height: 100vh;
-  z-index: 100;
+  z-index: 1;
   top: 0;
   right: 0;
-  border-left: 1px solid rgb(185, 183, 183);
+  /* border-left: 2px solid rgb(185, 183, 183); */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .sidebar h2 {
-  margin-bottom: 24px;
+  padding: 20px;
+  /* margin-bottom: 24px; */
   font-size: 1.5rem;
-  background-color: #FBF5DE;
+  background-color: #dddddd;
+  border-bottom: 1px solid rgb(177, 175, 175);
 }
 
 .sidebar ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .sidebar li {
@@ -30,12 +33,19 @@
 }
 
 .sidebar li:hover {
-  text-decoration: underline;
+  
 }
 
 .user-item{
     padding: 10px;
-    margin: 3px;
-    background-color: #FBF5DE;
-    border: 1px solid gray;
+    /* margin: 3px; */
+    background-color: #dddddd;
+    border-bottom: 1px solid gray;
+    /* box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px; */
+}
+
+.user-item:hover{
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+  /* box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
