--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -1,16 +1,21 @@
-.register-container {
+.register-page{
   height: 100vh;
-  max-width: 400px;
+}
+
+.register-container {
+  /* height: 100vh; */
+  max-width: 360px;
+  /* height: 350px; */
   margin: 40px auto;
   padding: 20px;
-  border: 1px solid white;
+  /* border: 1px solid black; */
   border-radius: 8px;
-  background: white;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  background: #DDDDDD;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .register-form{
-  background-color: #fff;
+  background-color: #DDDDDD;
 }
 
 .register-container h2 {
@@ -18,7 +23,7 @@
   margin-bottom: 20px;
   color: #3D74B6;
   font-family: 'Courier New', Courier, monospace;
-  background-color: white;
+  background-color: #DDDDDD;
 }
 
 .register-container input {
@@ -26,8 +31,8 @@
   padding: 10px;
   margin: 10px 0;
   border-radius: 4px;
-  background-color: white;
-  border: 1px solid #ddd;
+  background-color: #DDDDDD;
+  border: 1px solid gray; 
 }
 
 .register-container button {
