--- a/client/src/pages/Auth/Register.css
+++ b/client/src/pages/Auth/Register.css
@@ -1,5 +1,12 @@
 .register-page{
-  height: 100vh;
+  /* height: 100vh; */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.register-page::-webkit-scrollbar {
+  display: none;
 }
 
 .register-container {
