--- a/client/src/pages/Chat/ChatPage.css
+++ b/client/src/pages/Chat/ChatPage.css
@@ -5,6 +5,9 @@
   /* background-color: #000000; */
   font-family: 'Courier New', Courier, monospace;
   border: 1px solid rgb(173, 173, 173);
+  overflow-y: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .chat-page::-webkit-scrollbar{
