--- a/client/src/pages/Chat/SideBar.css
+++ b/client/src/pages/Chat/SideBar.css
@@ -11,6 +11,13 @@
   right: 0;
   /* border-left: 2px solid rgb(185, 183, 183); */
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+   overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 .sidebar h2 {
